fix spacing and align items in center

--- a/style.css
+++ b/style.css
@@ -75,3 +75,11 @@ body {
   transform: translate(-50%, -50%);
   transition: all 0.4s ease-in-out;
 }
+.content-d-m {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  align-items: center;
+  margin-bottom: 12px;
+  transition: all 0.4s ease-out;
+}
